<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="title_movies">Movies</string>
    <string name="title_tv_shows">TV Shows</string>
    <string name="title_favorites">Favorites</string>
    <string name="img_poster">Poster</string>
    <string name="language">en-US</string>
    <string name="title">Title</string>
    <string name="release_date">Release Date</string>
    <string name="overview">Overview</string>
    <string name="detail_movie">Movie Detail</string>
    <string name="detail_tv_show">TV Show Detail</string>
    <string name="add_favorite">Added to favorites</string>
    <string name="already_favorite">Already saved in favorites</string>
    <string name="title_delete">Delete</string>
    <string name="delete">Remove from favorites?</string>
    <string name="delete_item">Removed from favorites</string>
    <string name="delete_failed">No Data</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="appwidget_text">Favorites Widget</string>
    <string name="empty_text">No data</string>
    <string name="search">Search</string>
    <string name="search_hint_movie">Search Movie</string>
    <string name="search_hint_tv_show">Search TV Show</string>
    <string name="change_language">Change Language</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="release_today">Release Today Reminder</string>
    <string name="settings">Settings</string>
    <string name="set_daily_reminder">Daily reminder are activated</string>
    <string name="cancel_daily_reminder">Daily reminder are disabled</string>
    <string name="set_release_today_reminder">Release today reminder are activated</string>
    <string name="cancel_release_today_reminder">Release today reminder reminder are disabled</string>
    <string name="message_daily_reminder">Hi, don\'t forget to watch a movie today</string>
    <string name="message_release_today_reminder">Hi, there is a new movie today</string>
    <string name="no_data">No data!</string>
</resources>
